# libchai-smdc

./: .gitignore  Cargo.toml  README.md
assets/: key_distribution.txt  pair_equivalence.txt
benches/: benchmark.rs
examples/: 米十五笔.txt  米十五笔.yaml
src/: lib.rs  main.rs  smdcencoder.rs  smdcobjective.rs
